# csnake

./: .clang-format  CMakeLists.txt
.cache/clangd/index/: app.c.A700185CAE27EA1C.idx  app.c.E889A3867F0DBEFC.idx  app.h.3DDB4CACD3C2D021.idx  app.h.F8C2D8859BDACAA1.idx  main.c.A2539FAD1F8E3973.idx  main.c.A45FD8CE81C454BD.idx  trace.c.5241052DEBA33CF5.idx  trace.c.FF10A080D8CE890E.idx  trace.h.43CC7E886C84CD56.idx  trace.h.D1FC6345C718C5B1.idx  utils.h.176B99F2AE6C96FC.idx  utils.h.C579A6BFE1601DCD.idx  world.c.0E1E7B2D4EB7AED9.idx  world.c.3DA1DF3F1FED56EB.idx  world.h.2D998F8AEABBFDE0.idx  world.h.4C7A5AFF80493845.idx
include/: app.h  main.h  trace.h  utils.h  world.h
src/: app.c  main.c  trace.c  world.c
